--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     };
 
     document.dispatchEvent(new CustomEvent('CustomPageView', { detail: document.DataLayer }));
+    window.dataLayer.push({
+          event: document.DataLayer.eventName,
+          ...data});
+  
 </script>
 <!-- Código merda do Vini (noscript) -->
 
