--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- Código merda do Vini (noscript) -->
 <script>
     document.DataLayer = {
-        eventName: "PageView",
+        event: "CustomPageView",
         custom: {
             report: {
                 FilterNames: "Número de Funcionários|Mosaic Business",
@@ -48,9 +48,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     };
 
     document.dispatchEvent(new CustomEvent('CustomPageView', { detail: document.DataLayer }));
-    window.dataLayer.push({
-          event: document.DataLayer.eventName,
-          ...document.DataLayer});
+    window.dataLayer.push({...document.DataLayer});
   
 </script>
 <!-- Código merda do Vini (noscript) -->
