--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
   </head>
   <body>
+
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-59LHSTL9"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -207,5 +208,6 @@ window.dataLayer.push(customData);
         once: true
       });
     </script>
+    <script type="text/javascript">_satellite.pageBottom();</script>
   </body>
 </html>
