--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-<script src="https://assets.adobedtm.com/25faba9991ad/a378e6610d35/launch-7e987fb7eeb7-development.min.js" async></script>
+<script src="https://assets.adobedtm.com/25faba9991ad/a378e6610d35/launch-7e987fb7eeb7-development.min.js"></script>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
